src/test/ui/resolve/issue-3907.stderr
error[E0404]: expected trait, found type alias `Foo`
  --> $DIR/issue-3907.rs:11:6
   |
LL | impl Foo for S {
   |      ^^^ type aliases cannot be used as traits
   |
   = note: did you mean to use a trait alias?
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use issue_3907::Foo;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
